working api countrie and api corona 2

--- a/index.html
+++ b/index.html
@@ -15,6 +15,34 @@
     <title>Covid-Data</title>
 </head>
 <body>
-helllo
+<header>
+    Nav
+</header>
+<section id="main">
+    <div class="main-">
+        <div class="main-header">Covid Data</div>
+        <div class="map-div">
+            map
+        </div>
+        <div class="statistic-div">
+            graph
+        </div>
+        <div class="ui-div">
+            <div class="buttons-div">
+                <div class="data-buttons">
+                    <div class="regions-buttons-div">
+                        <button class="north-america">North America</button>
+                        <button class="south-america">South America</button>
+                        <button class="europe">Europe</button>
+                        <button class="africa">Africa</button>
+                        <button class="asia">Asia</button>
+                        <button class="australia">Australia</button>
+                        <button class="Antartica">Antartica</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
