starting testing with graphs

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
             <div class="buttons-div">
                 <div class="data-buttons">
                     <div class="regions-buttons-div">
-                        <button class="north-america">North America</button>
-                        <button class="south-america">South America</button>
-                        <button class="europe">Europe</button>
-                        <button class="africa">Africa</button>
-                        <button class="asia">Asia</button>
-                        <button class="australia">Australia</button>
-                        <button class="Antartica">Antartica</button>
+<!--                        <button class="north-america" data-region="north_americas">North America</button>-->
+<!--                        <button class="south-america" data-region="south americas">South America</button>-->
+                        <button class="americas" data-region="americas">Americas</button>
+                        <button class="europe" data-region="europe">Europe</button>
+                        <button class="africa" data-region="africa">Africa</button>
+                        <button class="asia" data-region="asia">Asia</button>
+                        <button class="oceania" data-region="oceania">Oceania</button>
+<!--                        <button class="antartica" data-region="antartica">Antartica</button>-->
+                        <button class="world" data-region="world">World</button>
                     </div>
                 </div>
             </div>
