--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="">
     <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/utility.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/chart.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" media="screen and (max-width:900px)" href="./css/mobile.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.2/chart.min.js" integrity="sha512-tMabqarPtykgDtdtSqCL3uLVM0gS1ZkUAVhRFu1vSEFgvB73niFQWJuvviDyBGBH22Lcau4rHB5p2K2T0Xvr6Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -17,32 +19,43 @@
 </head>
 <body>
 <header>
-    <div class="regions-buttons-div">
-        <!--                        <button class="north-america" data-region="north_americas">North America</button>-->
-        <!--                        <button class="south-america" data-region="south americas">South America</button>-->
-        <button class="americas" data-region="americas">Americas</button>
-        <button class="europe" data-region="europe">Europe</button>
-        <button class="africa" data-region="africa">Africa</button>
-        <button class="asia" data-region="asia">Asia</button>
-        <button class="oceania" data-region="oceania">Oceania</button>
-        <!--                        <button class="antartica" data-region="antartica">Antartica</button>-->
-        <button class="world" data-region="world">World</button>
-    </div>
+
 </header>
 <section id="main">
+    <div class="main-header flex">
+        <h1>Covid Data - <span class="date"></span></h1>
+    </div>
     <div class="main-">
-        <div class="main-header">Covid Data</div>
-        <div class="map-div">
-            map
+        <div class="regions-buttons-div flex ">
+            <!--                        <button class="north-america" data-region="north_americas">North America</button>-->
+            <!--                        <button class="south-america" data-region="south americas">South America</button>-->
+            <button class="americas" data-region="americas">Americas</button>
+            <button class="europe" data-region="europe">Europe</button>
+            <button class="africa" data-region="africa">Africa</button>
+            <button class="asia" data-region="asia">Asia</button>
+            <button class="oceania" data-region="oceania">Oceania</button>
+            <!--                        <button class="antartica" data-region="antartica">Antartica</button>-->
+            <button class="world" data-region="world">World</button>
         </div>
+        <div class="category-buttons-div flex">
+            <button class="category-button" data-button="dataChartConfirmed" data-name="Confirmed Cases">Confirmed Cases</button>
+            <button class="category-button" data-button="dataChartCritical" data-name="Criticals">Critical</button>
+            <button class="category-button" data-button="dataChartRecovered" data-name="Recovered">Recovered</button>
+            <button class="category-button" data-button="dataChartDeaths" data-name="Deaths">Deaths</button>
+        </div>
+        <div class="chart-type-buttons-div">
+            <button class="chart-type-button" data-type="bar" >Bar</button>
+            <button class="chart-type-button" data-type="line" >Line</button>
+            <button class="chart-type-button" data-type="bar" >Bar</button>
+
+        </div>
+        <div class="map-div"></div>
         <div class="chart-div">
             <canvas id="chart"></canvas>
         </div>
         <div class="statistic-div">
-            graph
+
         </div>
-
-
 
         <div class="ui-div">
             <div class="buttons-div">
@@ -53,5 +66,8 @@
         </div>
     </div>
 </section>
+<footer id="footer">
+    footer
+</footer>
 </body>
 </html>
