add country graph

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="ui-div">
             <div class="buttons-div">
-                <div class="data-buttons">
+                <div class="countries-buttons">
 
                 </div>
             </div>
