--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
             <button class="category-button" data-button="dataChartDeaths" data-name="Deaths">Deaths</button>
         </div>
         <div class="chart-type-buttons-div">
+
+            <button class="chart-type-button" data-type='doughnut'>Doughnut</button>
             <button class="chart-type-button" data-type="bar" >Bar</button>
             <button class="chart-type-button" data-type="line" >Line</button>
-            <button class="chart-type-button" data-type="bar" >Bar</button>
+            <button class="chart-type-button" data-type="pie" >Pie</button>
+            <button class="chart-type-button" data-type="polarArea" >PolarArea</button>
+
 
         </div>
         <div class="map-div"></div>
@@ -67,7 +71,15 @@
     </div>
 </section>
 <footer id="footer">
-    footer
+  <div class="footer-upper-div">
+      <h3>Covid Data Site</h3>
+  </div>
+    <div class="footer-bottom-div">
+        <p>Site Created by DK</p>
+    </div>
+    <div class="copy-right-div">
+        <p>&copy;2021</p>
+    </div>
 </footer>
 </body>
 </html>
