--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <div class="regions-buttons-div flex ">
             <!--                        <button class="north-america" data-region="north_americas">North America</button>-->
             <!--                        <button class="south-america" data-region="south americas">South America</button>-->
-            <button class="americas" data-region="americas">Americas</button>
-            <button class="europe" data-region="europe">Europe</button>
-            <button class="africa" data-region="africa">Africa</button>
-            <button class="asia" data-region="asia">Asia</button>
-            <button class="oceania" data-region="oceania">Oceania</button>
+            <button class="regions-button americas" data-region="americas">Americas</button>
+            <button class="regions-button europe" data-region="europe">Europe</button>
+            <button class="regions-button africa" data-region="africa">Africa</button>
+            <button class="regions-button asia" data-region="asia">Asia</button>
+            <button class="regions-button oceania" data-region="oceania">Oceania</button>
             <!--                        <button class="antartica" data-region="antartica">Antartica</button>-->
             <button class="world" data-region="world">World</button>
         </div>
