--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             <button class="regions-button africa" data-region="africa">Africa</button>
             <button class="regions-button asia" data-region="asia">Asia</button>
             <button class="regions-button oceania" data-region="oceania">Oceania</button>
-            <!--                        <button class="antartica" data-region="antartica">Antartica</button>-->
-            <button class="world" data-region="world">World</button>
+<!--            <button class="world" data-region="world">World</button>-->
         </div>
         <div class="category-buttons-div flex">
             <button class="category-button" data-button="dataChartConfirmed" data-name="Confirmed Cases">Confirmed Cases</button>
@@ -53,7 +52,9 @@
 
 
         </div>
-        <div class="map-div"></div>
+        <div class="map-div">
+            <div class="map"></div>
+        </div>
         <div class="chart-div">
             <canvas id="chart"></canvas>
         </div>
