problems with buttons and spinner

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 </header>
 <section id="main">
+
     <div class="main-header flex">
         <h1>Covid Data - <span class="date"></span></h1>
     </div>
@@ -43,14 +44,11 @@
             <button class="category-button" data-button="dataChartDeaths" data-name="Deaths">Deaths</button>
         </div>
         <div class="chart-type-buttons-div">
-
             <button class="chart-type-button" data-type='doughnut'>Doughnut</button>
             <button class="chart-type-button" data-type="bar" >Bar</button>
             <button class="chart-type-button" data-type="line" >Line</button>
             <button class="chart-type-button" data-type="pie" >Pie</button>
             <button class="chart-type-button" data-type="polarArea" >PolarArea</button>
-
-
         </div>
         <div class="map-div">
             <div class="map"></div>
@@ -69,6 +67,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="loader-spinner">
+
     </div>
 </section>
 <footer id="footer">
