problems with buttons and spinner 2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="">
+    <meta name="description" content="world covid data">
+    <meta name="keywords" content="covid, world data">
+    <meta name="author" content="DK">
+    <link rel="icon" href="./assets/images/corona_icon1.png">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/utility.css">
     <link rel="stylesheet" href="./css/style.css">
