add selecte button function for region bujttons start responsive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="main-header flex">
         <h1>Covid Data - <span class="date"></span></h1>
     </div>
-    <hr>
+<!--    <hr>-->
     <div class="main-">
         <div class="regions-buttons-div flex ">
             <!--                        <button class="north-america" data-region="north_americas">North America</button>-->
@@ -41,14 +41,14 @@
             <button class="regions-button oceania" data-region="oceania">Oceania</button>
 <!--            <button class="world" data-region="world">World</button>-->
         </div>
-        <hr>
+<!--        <hr>-->
         <div class="category-buttons-div flex">
             <button class="category-button" data-button="dataChartConfirmed" data-name="Confirmed Cases">Confirmed Cases</button>
             <button class="category-button" data-button="dataChartCritical" data-name="Criticals">Critical</button>
             <button class="category-button" data-button="dataChartRecovered" data-name="Recovered">Recovered</button>
             <button class="category-button" data-button="dataChartDeaths" data-name="Deaths">Deaths</button>
         </div>
-        <hr>
+<!--        <hr>-->
         <div class="chart-type-buttons-div">
             <button class="chart-type-button" data-type='doughnut'>Doughnut</button>
             <button class="chart-type-button" data-type="bar" >Bar</button>
@@ -60,15 +60,15 @@
             <div class="map"></div>
         </div>
         <div class="chart-div">
-            <canvas id="chart"></canvas>
+            <canvas id="chart"  responsive=true"></canvas>
         </div>
         <div class="statistic-div">
 
         </div>
 
         <div class="ui-div">
-            <div class="buttons-div">
-                <div class="countries-buttons">
+            <div class="buttons-div flex">
+                <div class="countries-buttons  ">
 
                 </div>
             </div>
@@ -78,16 +78,16 @@
 
     </div>
 </section>
-<footer id="footer">
-  <div class="footer-upper-div">
-      <h3>Covid Data Site</h3>
-  </div>
-    <div class="footer-bottom-div">
-        <p>Site Created by DK</p>
-    </div>
-    <div class="copy-right-div">
-        <p>&copy;2021</p>
-    </div>
-</footer>
+<!--<footer id="footer">-->
+<!--  <div class="footer-upper-div">-->
+<!--      <h3>Covid Data Site</h3>-->
+<!--  </div>-->
+<!--    <div class="footer-bottom-div">-->
+<!--        <p>Site Created by DK</p>-->
+<!--    </div>-->
+<!--    <div class="copy-right-div">-->
+<!--        <p>&copy;2021</p>-->
+<!--    </div>-->
+<!--</footer>-->
 </body>
 </html>
