add country info

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <div class="chart-div">
             <canvas id="chart"  responsive=true"></canvas>
         </div>
-        <div class="statistic-div">
-
+        <div class="country-info-div   ">
+            <div class="country-info   hide"></div>
         </div>
 
         <div class="ui-div">
             <div class="buttons-div flex">
-                <div class="countries-buttons  ">
+                <div class="countries-buttons  flex">
 
                 </div>
             </div>
